test/error/globalrequire.luau
local s = require "/test.luau"